# mlpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bash.exe.stackdump  environment.yml  foods.csv  linreg.cpp  linreg.h  main.cpp  polyfeatures.cpp  polyfeatures.h  spam.csv  traintest.cpp  traintest.h
.github/workflows/: ci.yml  cpp.yml
benchmark/: CMakeLists.txt  core_transformation.cpp  matrix.cpp
cmake/: CMakeLists.txt.in  conda.cmake
example/: CMakeLists.txt  classification.cpp  clustering.cpp  curves.cpp  kfold.cpp  logistic_regression.cpp  main.cpp  mnist.cpp  mulitnomial.cpp  multi_class.cpp  multivar.cpp  polynomial.cpp  regression.cpp  spamfilter.cpp  traintestsplit.cpp
src/: CMakeLists.txt  kfold.cpp  kfold.h  linreg.cpp  linreg.h  logreg.cpp  logreg.h  model_interface.h  multinomial_logreg.h  normalize.cpp  normalize.h  one_hot.cpp  oneforall.cpp  oneforall.h  oneforone.cpp  oneforone.h  polyfeatures.cpp  polyfeatures.h  regression.cpp  regression.h  traintest.cpp  traintest.h
src/classification/: CMakeLists.txt  binomial_distribution.cpp  binomial_distribution.h  classifier.h  decision_tree.cpp  decision_tree.h  decision_tree_node.cpp  decision_tree_node.h  distribution.h  gauss_distribution.cpp  gauss_distribution.h  knn.cpp  knn.h  logreg.cpp  logreg.h  multinomial_logreg.cpp  multinomial_logreg.h  naive_bayes.cpp  naive_bayes.h  naive_bayes_gauss.cpp  naive_bayes_gauss.h  oneforone.cpp  oneforone.h  random_forest.cpp  random_forest.h  roc.cpp  roc.h  svm.cpp  svm.h
src/clustering/: CMakeLists.txt  kmeans.cpp  kmeans.h
src/core/: CMakeLists.txt  csv_data.cpp  csv_data.h  csv_reader.cpp  csv_reader.h  kfold.cpp  kfold.h  learning_curve.cpp  learning_curve.h  matrix.cpp  matrix.h  matrix_iterator.cpp  matrix_iterator.h  mnist_data.cpp  mnist_data.h  model.h  normalize.cpp  normalize.h  one_hot.cpp  one_hot.h  parameters.cpp  parameters.h  polyfeatures.cpp  pseudo_inverse.cpp  pseudo_inverse.h  reverse_iterate.h  scoped_timer.h  standard_scale.cpp  standard_scale.h  testdata.h  traintest.cpp  traintest.h  validation_curve.cpp  validation_curve.h  vocabulary.cpp  vocabulary.h
src/neuronal/: CMakeLists.txt  activation.h  backprop_layer.cpp  backprop_layer.h  dense_layer.cpp  dense_layer.h  loss.h  net.cpp  net.h  solver.cpp  solver.h
src/preprocessing/: CMakeLists.txt  one_hot.cpp  one_hot.h  pca.cpp  pca.h  polyfeatures.h  scaler.cpp  scaler.h  vocabulary.cpp  vocabulary.h
src/regression/: CMakeLists.txt  linreg.cpp  linreg.h
src/ui/: CMakeLists.txt  main.cpp  qml.qrc
src/ui/qml/: Main.qml
test/: CMakeLists.txt  linreg.cpp  matrix.cpp  testdata.h
